# Pong

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: main.cpp
src/ai/: Bot.cpp  Bot.hpp  BotController.cpp  BotController.hpp
src/core/: Game.cpp  Game.hpp  GameObject.hpp  InputHandler.cpp  InputHandler.hpp  Renderer.cpp  Renderer.hpp  Surface.hpp  Texture.hpp  Window.cpp  Window.hpp
src/entity/: Ball.cpp  Ball.hpp  Blocker.cpp  Blocker.hpp
src/helpers/: Circle.hpp  Colors.hpp  Params.hpp
src/ui/: Font.cpp  Font.hpp  Score.cpp  Score.hpp
